Remove Flowglad marketplace integration, implement direct workflow purchases
- Removed Flowglad expressRouter from backend
- Simplified checkout to direct purchase recording (no external payment)
- Extended entitlements endpoint to include workflow access (owned + purchased)
- Added GET /api/workflows/accessible endpoint for accessible workflows
- Updated BlockPalette to fetch and display workflow agents
- Adapted all code to work with existing DB schema (no commerce columns)
- Created checkoutGating service for minimal purchase validation
- Added workflow execution support in run-block endpoint
- Lab page refreshes entitlements on mount

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,10 @@ DEMO_MODE=true
 
 # --- For real billing (when not in demo) ---
 # FLOWGLAD_SECRET_KEY=sk_test_...
+# FLOWGLAD_PRICING_MODEL_ID=pricing_model_...
+# FLOWGLAD_WEBHOOK_MODE=test
+# FLOWGLAD_WEBHOOK_SECRET_TEST=whsec_...
+# FLOWGLAD_WEBHOOK_SECRET_LIVE=whsec_...
 
 # --- Supabase Configuration ---
 SUPABASE_URL=https://your-project.supabase.co
